changed about path

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#!" id="home-button">Justin Tran</a>
           </li>
           <li class="right">
-            <a href="about.html">About</a>
+            <a href="Pages/about.html">About</a>
           </li>
           <li class="right">
             <a href="#!">Work</a>
