--- a/about.html
+++ b/about.html
@@ -16,20 +16,25 @@
       <div class="header-footer-container">
         <ul class="nav-list">
           <li class="left">
-            <a href="#!" id="home-button">Justin Tran</a>
+            <a href="index.html" id="home-button">Justin Tran</a>
           </li>
           <li class="right">
             <a href="#!">About</a>
           </li>
           <li class="right">
-            <a href="#!">Work</a>
+            <a href="index.html">Work</a>
           </li>
         </ul>
       </div>
     </nav>
   </header>
   <!--Introduction-->
-
+  <section class="container">
+    <h1>About</h1>
+    <p>Hi! I'm Justin Tran. I'm an aspiring UX Designer/Engineer and a 3rd-year student at the University of Washington majoring in Computer Science with a minor in Informatics.</p>
+    <p>I'm currently working as an undergraduate researcher with a directed research group in the Human Centered Design and Engineering department studying how people architect their environments to manage addictive smartphone use.</p>
+    <p>In my free time, I love watching movies, mostly. 🎥 Check out what I've been watching!</p>
+  </section>
   <footer>
     <div class="header-footer-container footer-text">
       <div id="copyright">© Justin Tran <script type="text/javascript">document.write(new Date().getFullYear());</script></div>
