added cyrus page

--- a/arque.html
+++ b/arque.html
@@ -23,14 +23,16 @@
     </div>
   </header>
   <article class="container">
-    <h1>Arque</h1>
-    <p>Duration: January 2018 - Present</p>
-    <p>Project Type: Design For America Project</p>
-    <p>Team Members: Anthea Bartlett, Sara Behbakht, Tracy Dinh, Kailey Terracciano, Sara Tieu, & me</p>
-    <p>My Role: UX Designer & Researcher</p>
-    <p>Tools: Figma, Google Forms</p>
-    <p>Skills: Ideation/Sketching, Interviews, Surveys, Wire-framing, Usability Testing</p>
-    <p>Arque is a website for parents of elementary school children to find a community of similar parents, where they can exchange resources, track and share goal progress, and share experiences with other parents.</p>
+    <header>
+      <h1>Arque</h1>
+      <p>Duration: January 2018 - Present</p>
+      <p>Project Type: Design For America Project</p>
+      <p>Team Members: Anthea Bartlett, Sara Behbakht, Tracy Dinh, Kailey Terracciano, Sara Tieu, & me</p>
+      <p>My Role: UX Designer & Researcher</p>
+      <p>Tools: Figma, Google Forms</p>
+      <p>Skills: Ideation/Sketching, Interviews, Surveys, Wire-framing, Usability Testing</p>
+      <p>Arque is a website for parents of elementary school children to find a community of similar parents, where they can exchange resources, track and share goal progress, and share experiences with other parents.</p>
+    </header>
     <section>
       <h2>Problem Space</h2>
       <p>Anxiety affects <a href="https://adaa.org/about-adaa/press-room/facts-statistics#">1 in 8 children</a>. <a href="https://adaa.org/about-adaa/press-room/facts-statistics#">Research shows</a> that untreated children with anxiety disorders are at a higher risk to perform poorly in school, miss out on important social experiences, and engage in substance abuse. Because anxiety that goes untreated usually continues into adulthood, we thought it was important to try to address the issue of anxiety as early as possible.</p>
@@ -42,37 +44,37 @@
     <section>
       <h2>Research</h2>
       <h3>Interviews</h3>
-        <p>We interviewed different medical professionals on the different types of treatment and about their knowledge of how accessible these treatments are. Some key takeaways were:</p>
-        <p>“Parental education and awareness of symptom recognition are important aspects of treatment.”</p>
-        <p>- Daisy Chow, Therapist</p>
-        <p>“Parents should not only be engaged but also supported in the treatment of their child.”</p>
-        <p>- Ashley Sedlacek, Practicum student</p>
-        <p>"Communication between parents and their children are extremely important"</p>
-        <p>- Bev Garreson, Pediatrician's Assistant</p>
-        <h3>Surveys</h3>
-        <p>We sent out a survey to parents with children dealing with anxiety to ask them about what they’re doing about treating their children and what difficulties they faced when trying to access treatment. We found 3 major insights:</p>
-        <ul>
-          <li>A majority of the parents were not offered resources for anxiety through teachers or family doctors and had to seek out information on their own</li>
-          <li>Many parents who did try to find resources struggled in finding reliable or effective sources</li>
-          <li>Many parents feel they don't have adequate resources to help their child</li>
-        </ul>
+      <p>We interviewed different medical professionals on the different types of treatment and about their knowledge of how accessible these treatments are. Some key takeaways were:</p>
+      <p>“Parental education and awareness of symptom recognition are important aspects of treatment.”</p>
+      <p>- Daisy Chow, Therapist</p>
+      <p>“Parents should not only be engaged but also supported in the treatment of their child.”</p>
+      <p>- Ashley Sedlacek, Practicum student</p>
+      <p>"Communication between parents and their children are extremely important"</p>
+      <p>- Bev Garreson, Pediatrician's Assistant</p>
+      <h3>Surveys</h3>
+      <p>We sent out a survey to parents with children dealing with anxiety to ask them about what they’re doing about treating their children and what difficulties they faced when trying to access treatment. We found 3 major insights:</p>
+      <ul>
+        <li>A majority of the parents were not offered resources for anxiety through teachers or family doctors and had to seek out information on their own</li>
+        <li>Many parents who did try to find resources struggled in finding reliable or effective sources</li>
+        <li>Many parents feel they don't have adequate resources to help their child</li>
+      </ul>
     </section>
     <section>
       <h2>Design Sketches & Ideas</h2>
       <p>First, we gathered all of our major insights from our research and tried to organize them to create our design principles.</p>
-      <img src="Images/arque/sticky-notes.jpg">
+      <img src="Images/arque/sticky-notes.jpg" alt="Sticky Notes Affinity Diagram">
       <p>Using our principles, we brainstorm possible solutions that would make information about treatment more accessible to parents.</p>
-      <img src="Images/arque/sketches.png">
+      <img src="Images/arque/sketches.png" alt="Design Sketches">
     </section>
     <section>
       <h2>Paper Prototype</h2>
       <p>We started with low fidelity paper prototypes to figure out how we wanted our basic layout to look. We did some quick usability testing where we had a few participants try to search for treatment based on their child's symptoms. We learned that users wanted a little more guidance than just a search bar with filters on the side, so we decided to create a more in-depth process for searching for resources in our digital prototype.</p>
-      <img src="Images/arque/paper-prototype.png">
+      <img src="Images/arque/paper-prototype.png" alt="Paper Prototpye">
     </section>
     <section>
       <h2>Digital Prototype</h2>
       <p>For our digital prototype, we used Figma to create our screens. We took in some of the suggestions from testing our paper prototypes by trying to offer more guidance when looking for resources.</p>
-      <img src="Images/arque/home-page.png">
+      <img src="Images/arque/home-page.png" alt="Home Page">
     </section>
     <section>
       <h2>Usability Testing</h2>
@@ -81,16 +83,16 @@
       <ul>
         <li>Our prototype focused a lot on finding resources. There was no reason to continue using the site once users found what they needed. We focused on fleshing out the social aspects of the site more by creating social progress bars and discussion pages.</li>
         <li>Parents wanted to see the progress of other parents and what was working
-We decided to create a feature to share progress. I designed the progress tracking feature that allows user to share goals for their child and what has been working for achieving each goal.</li>
-      </ul>
-    </section>
-    <section>
-      <h2>Reflection</h2>
-      <p>We also had some features that we didn’t have time to implement within our timeframe. We are planning to continue working on our project for the next quarter and would like to implement therapist profiles, tools specific for child anxiety and not just general anxiety, and improving privacy settings.</p>
-    </section>
-  </article>
-  <!--Footer-->
-  <div id="footer">
-  </div>
-</body>
-</html>
+          We decided to create a feature to share progress. I designed the progress tracking feature that allows user to share goals for their child and what has been working for achieving each goal.</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Reflection</h2>
+        <p>We also had some features that we didn’t have time to implement within our timeframe. We are planning to continue working on our project for the next quarter and would like to implement therapist profiles, tools specific for child anxiety and not just general anxiety, and improving privacy settings.</p>
+      </section>
+    </article>
+    <!--Footer-->
+    <div id="footer">
+    </div>
+  </body>
+  </html>
