reorganized html files

--- a/index.html
+++ b/index.html
@@ -6,16 +6,11 @@
 
   <title>Justin Tran</title>
 
-  <link rel="stylesheet" href="Stylesheets/main.css">
-  <link rel="stylesheet" href="Stylesheets/home.css">
+  <link rel="stylesheet" href="stylesheets/main.css">
+  <link rel="stylesheet" href="stylesheets/home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script>
-    $(function(){
-      $("#navigation-bar").load("navigation-bar.html");
-      $("#footer").load("footer.html");
-    });
-  </script>
+  <script src="/scripts/template.js"></script>
 </head>
 <body>
   <!--Navigation Bar-->
@@ -24,7 +19,6 @@
     </div>
   </header>
   <!--Introduction-->
-
   <section class="introduction-container">
     <div class="container">
       <div class="introduction">
@@ -36,19 +30,19 @@
   <div class="background">
     <section class="container">
       <h1 class="header-container">Featured Projects</h1>
-      <a href="pillar.html">
+      <a href="pages/work/pillar.html">
         <section class="project-container">
           <h2>UW Community Pillar</h2>
           <p>A pillar designed to foster a sense of community and to spark reflection on why we’re all at the university.</p>
         </section>
       </a>
-      <a href="phrasebot.html">
+      <a href="pages/work/phrasebot.html">
         <section class="project-container">
           <h2>Phrasebot</h2>
           <p>A location-based language and cultural assistant designed to aid new immigrants in overcoming language and cultural barriers.</p>
         </section>
       </a>
-      <a href="arque.html">
+      <a href="pages/work/arque.html">
         <section class="project-container">
           <h2>Arque</h2>
           <p>A website for parents of elementary school children to find a community of similar parents, where they can exchange resources, track and share goal progress, and share experiences with other parents.</p>
