--- a/Pages/about.html
+++ b/Pages/about.html
@@ -6,35 +6,25 @@
 
   <title>About - Justin Tran</title>
 
-  <link rel="stylesheet" type="text/css" href="Stylesheets/main.css">
-  <!-- <link rel="stylesheet" href="css/normalize.min.css"> -->
+  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="/scripts/template.js"></script>
 </head>
 <body>
   <!--Navigation Bar-->
   <header>
-    <nav>
-      <div class="header-footer-container">
-        <ul class="nav-list">
-          <li class="left">
-            <a href="#!" id="home-button">Justin Tran</a>
-          </li>
-          <li class="right">
-            <a href="#!">About</a>
-          </li>
-          <li class="right">
-            <a href="#!">Work</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div id="navigation-bar">
+    </div>
   </header>
   <!--Introduction-->
-
-  <footer>
-    <div class="header-footer-container footer-text">
-      <div id="copyright">© Justin Tran <script type="text/javascript">document.write(new Date().getFullYear());</script></div>
-      <div id="footer-comment">Developed by Justin Tran</div>
-    </div>
-  </footer>
+  <section class="container">
+    <h1>About</h1>
+    <p>Hi! I'm Justin Tran. I'm an aspiring UX Designer/Engineer and a 3rd-year student at the University of Washington majoring in Computer Science with a minor in Informatics.</p>
+    <p>I'm currently working as an undergraduate researcher with a directed research group in the Human Centered Design and Engineering department studying how people architect their environments to manage addictive smartphone use.</p>
+  </section>
+  <!--Footer-->
+  <div id="footer">
+  </div>
 </body>
 </html>
