--- a/pages/work/arque.html
+++ b/pages/work/arque.html
@@ -6,15 +6,10 @@
 
   <title>Arque - Justin Tran</title>
 
-  <link rel="stylesheet" href="Stylesheets/main.css">
+  <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script>
-  $(function(){
-    $("#navigation-bar").load("navigation-bar.html");
-    $("#footer").load("footer.html");
-  });
-  </script>
+  <script src="/scripts/template.js"></script>
 </head>
 <body>
   <!--Navigation Bar-->
@@ -62,19 +57,19 @@
     <section>
       <h2>Design Sketches & Ideas</h2>
       <p>First, we gathered all of our major insights from our research and tried to organize them to create our design principles.</p>
-      <img src="Images/arque/sticky-notes.jpg" alt="Sticky Notes Affinity Diagram">
+      <img src="/images/arque/sticky-notes.jpg" alt="Sticky Notes Affinity Diagram">
       <p>Using our principles, we brainstorm possible solutions that would make information about treatment more accessible to parents.</p>
-      <img src="Images/arque/sketches.png" alt="Design Sketches">
+      <img src="/images/arque/sketches.png" alt="Design Sketches">
     </section>
     <section>
       <h2>Paper Prototype</h2>
       <p>We started with low fidelity paper prototypes to figure out how we wanted our basic layout to look. We did some quick usability testing where we had a few participants try to search for treatment based on their child's symptoms. We learned that users wanted a little more guidance than just a search bar with filters on the side, so we decided to create a more in-depth process for searching for resources in our digital prototype.</p>
-      <img src="Images/arque/paper-prototype.png" alt="Paper Prototpye">
+      <img src="/images/arque/paper-prototype.png" alt="Paper Prototpye">
     </section>
     <section>
       <h2>Digital Prototype</h2>
       <p>For our digital prototype, we used Figma to create our screens. We took in some of the suggestions from testing our paper prototypes by trying to offer more guidance when looking for resources.</p>
-      <img src="Images/arque/home-page.png" alt="Home Page">
+      <img src="/images/arque/home-page.png" alt="Home Page">
     </section>
     <section>
       <h2>Usability Testing</h2>
