--- a/pages/work/npo-go.html
+++ b/pages/work/npo-go.html
@@ -6,15 +6,10 @@
 
   <title>Template - Justin Tran</title>
 
-  <link rel="stylesheet" type="text/css" href="Stylesheets/main.css">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script>
-    $(function(){
-      $("#navigation-bar").load("navigation-bar.html");
-      $("#footer").load("footer.html");
-    });
-  </script>
+  <script src="/scripts/template.js"></script>
 </head>
 <body>
   <!--Navigation Bar-->
@@ -43,7 +38,7 @@
       <h2>Competitive Analysis</h2>
       <p>We looked at existing solutions to see what was already being done to help those who are homeless or dependent on food banks. We evaluated which aspects of these competitors addressed our solutions and which aspects didn't.</p>
       <h3>WeShelter</h3>
-      <img src="Images/npo-go/weshelter-screens.png" alt="WeShelter Screens">
+      <img src="/images/npo-go/weshelter-screens.png" alt="WeShelter Screens">
       <p>This app has a sponsoring company donate a small amount of money every time you tap a button.</p>
       <p>Things that address our problem:</p>
       <ul>
@@ -55,7 +50,7 @@
         <li class="cons">Didn't offer a way for users to donate their unwanted clothes or other items</li>
       </ul>
       <h3>HandUp</h3>
-      <img src="Images/npo-go/handup-homepage.png" alt="HandUp Homepage">
+      <img src="/images/npo-go/handup-homepage.png" alt="HandUp Homepage">
       <p>HandUp is like a Kickstarter for nonprofits. Nonprofits can create campaigns where users make monetary contributions.</p>
       <p>Things that address our problem:</p>
       <ul>
@@ -76,7 +71,7 @@
         <li>Many people said that incentives or rewards would make them more likely to donate</li>
         <li>Some people said they would like more transparency about the donation process and where their money or items end up</li>
       </ul>
-      <img src="Images/npo-go/survey-page.png" alt="Survey Page">
+      <img src="/images/npo-go/survey-page.png" alt="Survey Page">
       <h3>Interviews</h3>
       <p>We conducted several interviews for people who worked at charities and nonprofits. I interviewed Alex, who was a board member for the NPO "Hugs for Ghana". Through our interviews, we found that:</p>
       <ul>
@@ -88,8 +83,8 @@
     <section>
       <h2>Personas</h2>
       <p>Using our findings from the surveys and interviews, we created personas for NPO workers and potential donors.</p>
-      <img src="Images/npo-go/persona-1.png" alt="Persona Page 1">
-      <img src="Images/npo-go/persona-2.png" alt="Persona Page 2">
+      <img src="/images/npo-go/persona-1.png" alt="Persona Page 1">
+      <img src="/images/npo-go/persona-2.png" alt="Persona Page 2">
     </section>
     <section>
       <h2>Design Requirements</h2>
@@ -105,12 +100,12 @@
     </section>
     <section>
       <h2>Prototype</h2>
-      <img src="Images/npo-go/screen-1.png" alt="NPO Go Screen 1">
-      <img src="Images/npo-go/screen-2.png" alt="NPO Go Screen 2">
-      <img src="Images/npo-go/screen-3.png" alt="NPO Go Screen 3">
-      <img src="Images/npo-go/screen-4.png" alt="NPO Go Screen 4">
-      <img src="Images/npo-go/screen-5.png" alt="NPO Go Screen 5">
-      <img src="Images/npo-go/screen-6.png" alt="NPO Go Screen 6">
+      <img src="/images/npo-go/screen-1.png" alt="NPO Go Screen 1">
+      <img src="/images/npo-go/screen-2.png" alt="NPO Go Screen 2">
+      <img src="/images/npo-go/screen-3.png" alt="NPO Go Screen 3">
+      <img src="/images/npo-go/screen-4.png" alt="NPO Go Screen 4">
+      <img src="/images/npo-go/screen-5.png" alt="NPO Go Screen 5">
+      <img src="/images/npo-go/screen-6.png" alt="NPO Go Screen 6">
     </section>
     <section>
       <h2>Reflection</h2>
