--- a/pages/work/work.html
+++ b/pages/work/work.html
@@ -4,17 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Template - Justin Tran</title>
+  <title>Work - Justin Tran</title>
 
-  <link rel="stylesheet" type="text/css" href="Stylesheets/main.css">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script>
-    $(function(){
-      $("#navigation-bar").load("navigation-bar.html");
-      $("#footer").load("footer.html");
-    });
-  </script>
+  <script src="/scripts/template.js"></script>
 </head>
 <body>
   <!--Navigation Bar-->
@@ -23,6 +18,9 @@
     </div>
   </header>
   <article class="container">
+    <h1>Work</h1>
+    <h2>UX</h2>
+    <h2>Data Visualization</h2>
   </article>
   <!--Footer-->
   <div id="footer">
