changed to absolute file path

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
   <div class="background">
     <section class="container">
       <h1 class="header-container">Featured Projects</h1>
-      <a href="pages/work/pillar.html">
+      <a href="/pages/work/pillar.html">
         <section class="project-container">
           <h2>UW Community Pillar</h2>
           <p>A pillar designed to foster a sense of community and to spark reflection on why we’re all at the university.</p>
         </section>
       </a>
-      <a href="pages/work/phrasebot.html">
+      <a href="/pages/work/phrasebot.html">
         <section class="project-container">
           <h2>Phrasebot</h2>
           <p>A location-based language and cultural assistant designed to aid new immigrants in overcoming language and cultural barriers.</p>
         </section>
       </a>
-      <a href="pages/work/arque.html">
+      <a href="/pages/work/arque.html">
         <section class="project-container">
           <h2>Arque</h2>
           <p>A website for parents of elementary school children to find a community of similar parents, where they can exchange resources, track and share goal progress, and share experiences with other parents.</p>
