removed pages directory

--- a/work/work.html
+++ b/work/work.html
@@ -20,6 +20,18 @@
   <article class="container">
     <h1>Work</h1>
     <h2>UX</h2>
+    <a href="/work/pillar.html">
+      <div>UW Community Pillar</div>
+    </a>
+    <a href="/work/cyrus.html">
+      <div>Cyrus</div>
+    </a>
+    <a href="/work/phrasebot.html">
+      <div>Phrasebot</div>
+    </a>
+    <a href="/work/npo-go.html">
+      <div>NPO Go</div>
+    </a>
     <h2>Data Visualization</h2>
   </article>
   <!--Footer-->
