--- a/navigation-bar.html
+++ b/navigation-bar.html
@@ -5,10 +5,10 @@
         <a href="/index.html" id="home-button">Justin Tran</a>
       </li>
       <li class="right">
-        <a href="/pages/about.html">About</a>
+        <a href="/about.html">About</a>
       </li>
       <li class="right">
-        <a href="/pages/work/work.html">Work</a>
+        <a href="/work/work.html">Work</a>
       </li>
       <li class="right">
         <a href="/index.html">Home</a>
