moved nav bar and footer to jquery file

--- a/work/cyrus.html
+++ b/work/cyrus.html
@@ -9,14 +9,9 @@
   <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/scripts/template.js"></script>
+  <script src="/scripts/main.js"></script>
 </head>
 <body>
-  <!--Navigation Bar-->
-  <header>
-    <div id="navigation-bar">
-    </div>
-  </header>
   <article class="container">
     <header>
       <h1>Cyrus</h1>
@@ -73,8 +68,5 @@
         <p>This was my first hackathon, and I didn't go in with any high expectations. But in the end, I was really happy with what we came up with, even though there are still things I would've liked to improve. If we had more time, I’d want to do some more research on effective ways of learning vocabulary. Because we didn't have much time for research, we weren't able to research what type of learning is most effective for increasing vocabulary. Instead, we just chose games based on our personal experience with learning vocabulary. Check out our final prototype <a href="https://invis.io/U5FGIU03YK9">here</a>!</p>
       </section>
     </article>
-    <!--Footer-->
-    <div id="footer">
-    </div>
   </body>
   </html>
