--- a/work/npo-go.html
+++ b/work/npo-go.html
@@ -9,14 +9,9 @@
   <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/scripts/template.js"></script>
+  <script src="/scripts/main.js"></script>
 </head>
 <body>
-  <!--Navigation Bar-->
-  <header>
-    <div id="navigation-bar">
-    </div>
-  </header>
   <article class="container">
     <header>
       <h1>NPO Go</h1>
@@ -112,8 +107,5 @@
       <p>I would've liked to conduct more usability testing if we had the time. I also would've liked to see how effective our reward system was and if it was enough to encourage our users to donate more often. One challenge we had when design our solution was finding a way to make the donation process more transparent so users would know what was happening to their donations. We created pages for charities to make posts about donations received or upload photos of the donations being used. We hoped that keeping users updated would make them feel better about donating and also make them more excited to donate in the future. I would've liked to measure how effective this would've been in increasing donations. Overall, our surveys really helped us identify the many factors that prevented people from donating more often. Our personas also helped guide us during or wire framing process and helped us focus on making the donation process easy and enjoyable for our users. I had a lot of fun working with my group, and we won "Best Social Impact" out of 30+ groups. Check out the full project <a href="https://app.moqups.com/yoonjc24/yUga81dilK/view/page/ae2f30874">here</a>!</p>
     </section>
   </article>
-  <!--Footer-->
-  <div id="footer">
-  </div>
 </body>
 </html>
