--- a/about.html
+++ b/about.html
@@ -9,22 +9,13 @@
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/scripts/template.js"></script>
+  <script src="/scripts/main.js"></script>
 </head>
 <body>
-  <!--Navigation Bar-->
-  <header>
-    <div id="navigation-bar">
-    </div>
-  </header>
-  <!--Introduction-->
   <section class="container">
     <h1>About</h1>
     <p>Hi! I'm Justin Tran. I'm an aspiring UX Designer/Engineer and a 3rd-year student at the University of Washington majoring in Computer Science with a minor in Informatics.</p>
     <p>I'm currently working as an undergraduate researcher with a directed research group in the Human Centered Design and Engineering department studying how people architect their environments to manage addictive smartphone use.</p>
   </section>
-  <!--Footer-->
-  <div id="footer">
-  </div>
 </body>
 </html>
