--- a/index.html
+++ b/index.html
@@ -6,19 +6,13 @@
 
   <title>Justin Tran</title>
 
-  <link rel="stylesheet" href="stylesheets/main.css">
-  <link rel="stylesheet" href="stylesheets/home.css">
+  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/stylesheets/home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/scripts/template.js"></script>
+  <script src="/scripts/main.js"></script>
 </head>
 <body>
-  <!--Navigation Bar-->
-  <header>
-    <div id="navigation-bar">
-    </div>
-  </header>
-  <!--Introduction-->
   <section class="introduction-container">
     <div class="container">
       <div class="introduction">
@@ -49,9 +43,6 @@
         </section>
       </a>
     </section>
-  </div>
-  <!--Footer-->
-  <div id="footer">
   </div>
 </body>
 </html>
