--- a/navigation-bar.html
+++ b/navigation-bar.html
@@ -1,18 +1,20 @@
-<nav>
-  <div class="header-footer-container">
-    <ul class="nav-list">
-      <li class="left">
-        <a href="/index.html" id="home-button">Justin Tran</a>
-      </li>
-      <li class="right">
-        <a href="/about.html">About</a>
-      </li>
-      <li class="right">
-        <a href="/work/work.html">Work</a>
-      </li>
-      <li class="right">
-        <a href="/index.html">Home</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<div id=\"navigation-bar\">
+  <nav>
+    <div class="header-footer-container">
+      <ul class="nav-list">
+        <li class="left">
+          <a href="/index.html" id="home-button">Justin Tran</a>
+        </li>
+        <li class="right">
+          <a href="/about.html">About</a>
+        </li>
+        <li class="right">
+          <a href="/work/work.html">Work</a>
+        </li>
+        <li class="right">
+          <a href="/index.html">Home</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</div>
