--- a/work/phrasebot.html
+++ b/work/phrasebot.html
@@ -10,14 +10,9 @@
   <link rel="stylesheet" href="/stylesheets/phrasebot.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/scripts/template.js"></script>
+  <script src="/scripts/main.js"></script>
 </head>
 <body>
-  <!--Navigation Bar-->
-  <header>
-    <div id="navigation-bar">
-    </div>
-  </header>
   <article class="container">
     <header>
       <h1>Phrasebot</h1>
@@ -102,8 +97,5 @@
       <p>Through our user research and usability testing, we learned many things that we wouldn't have figured out on our own. We realized that there was also a need for customs and etiquette information for immigrants new to the US. Things like figuring out how to tip or how to apply for housing were difficult because of cultural differences. Through our usability testing, we made improvements to our interface to make it more intuitive and easier to navigate. If we had more time, I'd work on making the interface more visually appealing and conducting more usability testing to make our solution even more effective.</p>
     </section>
   </article>
-  <!--Footer-->
-  <div id="footer">
-  </div>
 </body>
 </html>
