--- a/work/work.html
+++ b/work/work.html
@@ -9,14 +9,9 @@
   <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/scripts/template.js"></script>
+  <script src="/scripts/main.js"></script>
 </head>
 <body>
-  <!--Navigation Bar-->
-  <header>
-    <div id="navigation-bar">
-    </div>
-  </header>
   <article class="container">
     <h1>Work</h1>
     <h2>UX</h2>
@@ -34,8 +29,5 @@
     </a>
     <h2>Data Visualization</h2>
   </article>
-  <!--Footer-->
-  <div id="footer">
-  </div>
 </body>
 </html>
