moved nav and footer to jquery for arque

--- a/work/arque.html
+++ b/work/arque.html
@@ -9,14 +9,9 @@
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/scripts/template.js"></script>
+  <script src="/scripts/main.js"></script>
 </head>
 <body>
-  <!--Navigation Bar-->
-  <header>
-    <div id="navigation-bar">
-    </div>
-  </header>
   <article class="container">
     <header>
       <h1>Arque</h1>
@@ -86,8 +81,5 @@
         <p>We also had some features that we didn’t have time to implement within our timeframe. We are planning to continue working on our project for the next quarter and would like to implement therapist profiles, tools specific for child anxiety and not just general anxiety, and improving privacy settings.</p>
       </section>
     </article>
-    <!--Footer-->
-    <div id="footer">
-    </div>
   </body>
   </html>
