--- a/work/work.html
+++ b/work/work.html
@@ -18,6 +18,9 @@
     <a href="/work/pillar.html">
       <div>UW Community Pillar</div>
     </a>
+    <a href="/work/arque.html">
+      <div>Arque</div>
+    </a>
     <a href="/work/cyrus.html">
       <div>Cyrus</div>
     </a>
