added data vis pages

--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
 <div class="header-footer-container footer-text">
-  <div id="copyright">&copy; Justin Tran 2018 (Fix this)</div>
+  <div id="copyright">&copy; Justin Tran <script>$("#copyright").append(new Date().getFullYear());</script></div>
   <div id="footer-comment">Developed by Justin Tran</div>
 </div>
