--- a/work/work.html
+++ b/work/work.html
@@ -31,6 +31,15 @@
       <div>NPO Go</div>
     </a>
     <h2>Data Visualization</h2>
+    <a href="/work/us-census-visualization.html">
+      <div>US Census Visualization</div>
+    </a>
+    <a href="/work/candidate-expenditures-visualization.html">
+      <div>WA Congressional Candidate Expenditures Visualization</div>
+    </a>
+    <a href="/work/relationship-data-exploration.html">
+      <div>Relationship Data Exploration</div>
+    </a>
   </article>
 </body>
 </html>
