--- a/navigation-bar.html
+++ b/navigation-bar.html
@@ -1,20 +1,10 @@
-<div id=\"navigation-bar\">
-  <nav>
-    <div class="header-footer-container">
-      <ul class="nav-list">
-        <li class="left">
-          <a href="/index.html" id="home-button">Justin Tran</a>
-        </li>
-        <li class="right">
-          <a href="/about.html">About</a>
-        </li>
-        <li class="right">
-          <a href="/work/work.html">Work</a>
-        </li>
-        <li class="right">
-          <a href="/index.html">Home</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+<div class="navigation-bar">
+  <div class="navigation-bar__buttons header-footer-container">
+    <a href="/index.html" class="logo"><div>Justin Tran</div></a>
+    <nav>
+      <a href="/index.html" class="nav-buttons"><div>Home</div></a>
+      <a href="/work/work.html" class="nav-buttons"><div>Work</div></a>
+      <a href="/about.html" class="nav-buttons"><div>About</div></a>
+    </nav>
+  </div>
 </div>
