--- a/work/phrasebot.html
+++ b/work/phrasebot.html
@@ -6,17 +6,19 @@
 
   <title>Phrasebot - Justin Tran</title>
 
-  <link rel="stylesheet" href="/stylesheets/main.css">
-  <link rel="stylesheet" href="/stylesheets/phrasebot.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/stylesheets/project.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/scripts/main.js"></script>
 </head>
 <body>
-  <article class="container">
+  <article>
     <header>
       <h1>Phrasebot</h1>
-      <img src="/images/phrasebot/phrasebot-cover.png" alt="Phrasebot Cover Photo">
+      <figure>
+        <img src="/images/phrasebot/phrasebot-cover.png" alt="Phrasebot Cover Photo">
+      </figure>
       <p>Duration: 3 Months</p>
       <p>Project Type: Class Project</p>
       <p>Team Members: Hannah Hertzog & me</p>
@@ -47,17 +49,23 @@
       </ul>
       <h3>Task Development</h3>
       <p>Using our research, we came up with 6 different tasks ranging from easy to hard that we discovered were common from our user research. We also created personas based on our interview participants to help demonstrate our tasks.</p>
-      <img src="/images/phrasebot/tasks-review-1.png" alt="Task Review Page 1">
-      <img src="/images/phrasebot/tasks-review-2.png" alt="Task Review Page 2">
+      <figure>
+        <img src="/images/phrasebot/tasks-review-1.png" alt="Task Review Page 1">
+        <img src="/images/phrasebot/tasks-review-2.png" alt="Task Review Page 2">
+      </figure>
     </section>
     <section>
       <h2>Design Sketches & Ideas</h2>
       <p>Here are some of my sketches for potential solutions during our ideation phase:</p>
-      <img src="/images/phrasebot/design-sketches.png" alt="Design Sketches">
+      <figure>
+        <img src="/images/phrasebot/design-sketches.png" alt="Design Sketches">
+      </figure>
       <p>We came up with different solutions that would address the 6 tasks, but in the end, we decided on a smartphone app for a context based language assistant. It would provide relevant phrases and etiquette tips based on the user's location. It would also allow users to ask each other for help. We also included a feature to allow users to rate restaurants and businesses based on their accessibility.</p>
       <h2>Paper Prototype</h2>
       <p>We made a paper prototype that we conducted our usability testing with. We focused on creating features that would aid our users in completing our 6 tasks.</p>
-      <img src="/images/phrasebot/paper-prototype.jpg" alt="Paper Prototype">
+      <figure>
+        <img src="/images/phrasebot/paper-prototype.jpg" alt="Paper Prototype">
+      </figure>
       <h3>Task 1: Looking up unfamiliar English words</h3>
       <p>To allow our users to look up words, we included a search tab for words and phrases. It also lets the user search through our etiquette tips.</p>
       <h3>Task 2: Tipping at restaurants</h3>
@@ -84,13 +92,13 @@
     <section>
       <h2>Digital Prototype</h2>
       <p>To address the issues we discovered from our usability testing, we labeled our tabs and added a map tab, where users could preview the contextual information at certain locations to prepare themselves. It also allows users to leave reviews and helpful information for other users about accessibility at those locations. We also allowed users to make comments on our information pages. For our digital prototype, we designed some alternative pages in Korean as an example of what our product would look like in different languages.</p>
-      <div class="screens">
+      <figure>
         <img src="/images/phrasebot/screen-1.jpg" alt="Screen 1">
         <img src="/images/phrasebot/screen-2.jpg" alt="Screen 2">
         <img src="/images/phrasebot/screen-3.jpg" alt="Screen 3">
         <img src="/images/phrasebot/screen-4.jpg" alt="Screen 4">
         <img src="/images/phrasebot/screen-5.jpg" alt="Screen 5">
-      </div>
+      </figure>
     </section>
     <section>
       <h2>Reflection</h2>
