fixed phrasebot images

--- a/index.html
+++ b/index.html
@@ -6,41 +6,40 @@
 
   <title>Justin Tran</title>
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="/stylesheets/home.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Song+Myung" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/scripts/main.js"></script>
 </head>
 <body>
-  <section class="introduction-container">
-    <div class="container">
-      <div class="introduction">
-        <h1>Hello! 👋</h1>
-        <div>I'm Justin, a rising senior at the University of Washington studying Computer Science. I'm interested in UX Design and Engineering. This summer, I'll be interning at <span class="google-blue">G</span><span class="google-red">o</span><span class="google-yellow">o</span><span class="google-blue">g</span><span class="google-green">l</span><span class="google-red">e</span> as a UX Engineer. I'm currently looking for fall and winter internships!</div>
-      </div>
+  <section class="page-container intro-container">
+    <div class="introduction">
+      <h1>Hello! 👋</h1>
+      <div>I'm Justin Tran, a rising senior at the University of Washington studying Computer Science. I'm interested in UX Design and Web Development. This summer, I'll be interning at <span class="google-blue">G</span><span class="google-red">o</span><span class="google-yellow">o</span><span class="google-blue">g</span><span class="google-green">l</span><span class="google-red">e</span> as a UX Engineer. I'm currently looking for fall and winter internships!</div>
     </div>
   </section>
-    <section class="container">
-      <h1 class="header-container">Featured Projects</h1>
-      <a href="/work/pillar.html">
-        <section class="project-container">
-          <h2>UW Community Pillar</h2>
-          <p>A pillar designed to foster a sense of community and to spark reflection on why we’re all at the university.</p>
-        </section>
-      </a>
-      <a href="/work/phrasebot.html">
-        <section class="project-container">
-          <h2>Phrasebot</h2>
-          <p>A location-based language and cultural assistant designed to aid new immigrants in overcoming language and cultural barriers.</p>
-        </section>
-      </a>
-      <a href="/work/arque.html">
-        <section class="project-container">
-          <h2>Arque</h2>
-          <p>A website for parents of elementary school children to find a community of similar parents, where they can exchange resources, track and share goal progress, and share experiences with other parents.</p>
-        </section>
-      </a>
-    </section>
+  <section>
+    <h1 class="header-container">Featured Projects</h1>
+    <a href="/work/pillar.html">
+      <section class="page-container project-container" id="pillar">
+        <h2>UW Community Pillar</h2>
+        <p>A pillar designed to foster a sense of community and to spark reflection on why we’re all at the university.</p>
+      </section>
+    </a>
+    <a href="/work/phrasebot.html">
+      <section class="page-container project-container" id="phrasebot">
+        <h2>Phrasebot</h2>
+        <p>A location-based language and cultural assistant designed to aid new immigrants in overcoming language and cultural barriers.</p>
+      </section>
+    </a>
+    <a href="/work/arque.html">
+      <section class="page-container project-container" id="arque">
+        <h2>Arque</h2>
+        <p>A website for parents of elementary school children to find a community of similar parents, where they can exchange resources, track and share goal progress, and share experiences with other parents.</p>
+      </section>
+    </a>
+  </section>
 </body>
 </html>
