--- a/template.html
+++ b/template.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <link rel="stylesheet" href="/stylesheets/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Song+Myung" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/scripts/main.js"></script>
 </head>
