--- a/work/work.html
+++ b/work/work.html
@@ -6,8 +6,9 @@
 
   <title>Work - Justin Tran</title>
 
-  <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Song+Myung" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/scripts/main.js"></script>
 </head>
@@ -29,6 +30,9 @@
     </a>
     <a href="/work/npo-go.html">
       <div>NPO Go</div>
+    </a>
+    <a href="/work/test.html">
+      <div>Test</div>
     </a>
     <h2>Data Visualization</h2>
     <a href="/work/us-census-visualization.html">
